--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <div class="product-info">
                         <h2>Дебетовая карта</h2>
                         <p>Кэшбек до 3000₽ в месяц</p>
-                        <a href="https://trnsfx.ru/go/sxo1ipx80c" class="apply-btn" data-product="1">Оформить</a>
+                        <a href="https://trnsfx.ru/go/sfm7qrgor3" class="apply-btn" data-product="1">Оформить</a>
                     </div>
                 </div>
             </div>
